# cherno_opengl

./: CMakeLists.txt
res/: basic.shader
src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
src/tests/: CMakeLists.txt  Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
